--- a/box.html
+++ b/box.html
@@ -8,11 +8,9 @@
     
 </head>
 <body>
-    <div class="booox">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <h1>hii</h1>
+    <div >
+   <a class="white" href="https://www.nike.com/ca/w/zoom-air-shoes-8y8c6zy7ok">shop</a>
 </div>
 </body>
 </html>
