--- a/box.html
+++ b/box.html
@@ -8,11 +8,9 @@
     
 </head>
 <body>
-    <div class="booox">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="tee">
+    <a  href="Ablaiiiiiiiiiiiiii.html">hehehh</a>
+</div>
 </div>
 </body>
 </html>
