--- a/Nike.html
+++ b/Nike.html
@@ -65,20 +65,22 @@
   <h1>SHOP BY CLASSICS</h1>
 <div class="dis">
   <div class="cl"> 
- <img class="img" src="air1.png" alt=""> 
-<h2>Air Max Plus</h2>
+ <img class="img" src="sneakers-1.png" alt=""> 
+<div class="kk"><h2>Air Max Plus</h2></div>
 </div>
 <div class="cl"> 
-  <img class="img" src="air2.png" alt="">
-<div class="kk"><h2>Air Max Dn SE</h2></div>
+  <img class="img" src="sneakers-2.png" alt="">
+<div class="kk">
+  <h2>Air Max Dn SE</h2>
+</div>
 </div>
 <div class="cl">
- <img class="img" src="air3.png" alt="">
- <h2>Air Max 270</h2>
+ <img class="img" src="sneakers-3.png" alt="">
+ <div class="kk"><h2>Air Max 270</h2></div>
 </div>
  <div 
- class="cl"><img class="img" src="air4.png" alt="">
-  <h2>Air Max 90</h2>
+ class="cl"><img class="img" src="sneakers-4.png" alt="">
+   <div class="kk"><h2>Air Max 90</h2></div>
 </div>
 </div>
 <h1>NIKE MEMEBER SHIP</h1>
@@ -103,6 +105,46 @@
     <h2>Your Customization Service</h2>
     <a class="align" href="https://www.nike.com/w/zoom-air-shoes-8y8c6zy7ok"> <strong>Shop</strong></a></div>
 </div>
+</div>
+<hr>
+<div class="il">
+  <div class="ul">
+  <ul>
+    <li><h3>Resources</h3></li>
+<li><p>Gift Cards</p></li>
+    <li><p>Find a Store</p></li>
+    <li><p>Become a member</p></li>
+    <li><p>Nike x NBA</p></li>
+    <li><p>Nike Journal</p></li>
+    <li><p>Nike Journal</p></li>
+    <li><p>Site Feedback</p></li>
+  </ul>
+</div>
+
+<div class="ul">
+  <ul>
+    <li><h3>Help</h3></li>
+<li><p>Get Help</p></li>
+<li><p>Order Status</p></li>
+<li><p>Shipping and Delivery</p></li>
+<li><p>Returns</p></li>
+<li><p>Order Cancellation</p></li>
+<li><p>Payment options</p></li>
+  </ul>
+</div>
+
+<div class="ul">
+  <ul>
+<li><h3>Company</h3></li>
+<li><p>About Nike</p></li>
+<li><p>News</p></li>
+<li><p>Career</li>
+  <li><p>Investors</p></li>
+  <li><p>Purpose</p></li>
+  <li><p>Sustainablitty</p></li>
+  </ul>
+</div>
+
 </div>
 
 
