--- a/indeex.html
+++ b/indeex.html
@@ -19,8 +19,20 @@
     </header>
     <main>
         <div class="contt">
+             
 <div class="zuun">zu</div>
-<div class="baruun">ba</div>
+<div class="baruun">
+   <div class="gr"></div>
+    <div class="bl">
+<div class="box1">
+    <div class="box"><div class="boo"></div></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    
+</div>
+
+    </div>
+</div>
         </div>
     </main>
     <footer></footer>
