--- a/Nike.html
+++ b/Nike.html
@@ -47,16 +47,29 @@
        
        </div>
        </div>
-
-<img id="i" src="4 huvtsas.webp" alt="">
 <div class="cont">
-
+<div class="oo">
+  <img id="wii" src="nike dunk.jpg" alt="">
 <div class="h">
+  <p>NIke by YOU</p>
+  <h2>NIKE shoes and clothes</h2>
+  <a class="align" href=""> <strong>Shop</strong></a>
+  </div>
+</div>
+<div class="oo">
+<img id="wii" src="summmer.jpg" alt="">
+<div class="t">
 <p>NIke by YOU</p>
 <h2>NIKE shoes and clothes</h2>
 <a class="align" href=""> <strong>Shop</strong></a>
 </div>
 </div>
+</div>
+
+
+
+
+
 <h1 id="new">NEW THIS WEEK</h1>    
     <div class="tee">
     <a class="edit" href="https://www.nike.com/w/zoom-air-shoes-8y8c6zy7ok">skop new arriivel</a>
