--- a/indeex.html
+++ b/indeex.html
@@ -25,7 +25,9 @@
    <div class="gr"></div>
     <div class="bl">
 <div class="box1">
-    <div class="box"><div class="boo"></div></div>
+    <div class="box">
+    <div class="boo"></div><div class="bxx"></div>
+   </div>
     <div class="box"></div>
     <div class="box"></div>
     
