--- a/box.html
+++ b/box.html
@@ -8,15 +8,33 @@
     
 </head>
 <body>
-<<<<<<< HEAD
-    <div class="tee">
-    <a  href="Ablaiiiiiiiiiiiiii.html">hehehh</a>
+<div class="heh">
+    
+
+<div class="huu">
+  <img src="nike dunk.jpg" alt="">  
+ <div class="rall">
+
+<div class="seb">
+    <p>hehehhehe</p>
+    <h2>hehehe</h2>
+</div>   
+</div>   
+
+ <img src="summmer.jpg" alt="">
+<div class="P">
+
+   
+
+    <div class="h">
+        <p>hehehe</p>
+        <h2>hedsauikjhdfkjs</h2>
+    </div>
 </div>
-=======
-    <h1>hii</h1>
-    <div >
-   <a class="white" href="https://www.nike.com/ca/w/zoom-air-shoes-8y8c6zy7ok">shop</a>
->>>>>>> 734c07b554272c38854f4c0b284aeed89130a2b7
+
+</div >
+
 </div>
+
 </body>
 </html>
