--- a/indeex.html
+++ b/indeex.html
@@ -6,28 +6,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="indeex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,
-700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav class="top">
+        <nav class="top ">
         <div class="useg">
-<img src="meno.svg" alt="">
+<img class="h1" src="meno.svg" alt="">
 <img class="h" src="you logo.png" alt="">
 <a id="nah" href="https://www.youtube.com/">
 <h1>YOUTUBE</h1></a>
     </div>
 <div class="usee">
-<h3 id="use" >search</h3>
-<img src="searchhh.svg" alt="">
+<h3 class="use" >search</h3>
+ <img class="search" src="searchhh.svg" alt="">
 
-<img src="mic.svg" alt="">
+<img id="mic" src="mic.svg" alt="">
 </div>
 
 <div class="usg">
-   <img src="settimg.svg" alt=""> 
+   <img id="mic" src="settimg.svg" alt=""> 
    <a class="he" href="shop.html">sign in </a>
 </div>
     </nav>
@@ -98,6 +97,28 @@
          <div class="boo"></div><div class="bxx"></div>
     </div>
     </div>
+<div class="box1">
+   
+    <div class="box">
+        <div class="boo"></div><div class="bxx"><div class="bb">img</div><div class="xx">text</div></div>
+       </div>
+       <div class="box">
+        <div class="boo"></div><div class="bxx"><div class="bb">img</div><div class="xx">text</div></div>
+       </div>
+       <div class="box">
+        <div class="boo"></div><div class="bxx"><div class="bb">img</div><div class="xx">text</div></div>
+       </div>
+</div>
+
+<div class="box1">
+    <div class="box">
+        <div class="boo"></div><div class="bxx"><div class="bb">img</div><div class="xx">text</div></div>
+       </div><div class="box">
+        <div class="boo"></div><div class="bxx"><div class="bb">img</div><div class="xx">text</div></div>
+       </div>
+
+</div>
+
 </div>
 </div>   
 </div>
